# deanonymization

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LOG  Makefile  README  README.md  T  a.py  analysis.txt  anonymized.txt  bak_res.txt  c.py  ck.py  compare.py  crawled.txt  create_small_data.py  data_analysis.cpp  data_analysis.hpp  debug.info  graph.cpp  graph.hpp  graph1.txt  graphTarget.txt  main  main.cpp  match.cpp  match.hpp  match_vars.hpp  matrix.txt  pair.txt  run.py  specific_run.py  tags  thpool.cpp
data/100%/: anonymized.txt
data/100%naive/: crawled.txt  pair_a_c.txt
data/50%/: anonymized.txt  crawled.txt
data/50%another/: anonymized.txt  smallG.txt
data/50%naive/: pair_a_c.txt
data/50%naive1/: crawled.txt  graph1.txt  pair_a_c.txt
data/50%sparsify/: anonymized.txt  crawled.txt
data/50_small/: anonymized.txt  crawled.txt  pair_a_c.txt
result/: 100  100_another  100_old_way  100naive  100naive_RS  100naive_RS_old_way  100naive_RSnew  100naive_RSnew_old_way  100naive_old_way  50  50_old_way  50naive  50naive_RS  50naive_RS_old_way  50naive_RSnew  50naive_RSnew_old_way  50naive_old_way  50sparsify  50sparsify_RS  50sparsify_RS_old_way  50sparsify_old_way  LOG100  LOG100_another  LOG100_ori  LOG100naive  LOG100naive_RS  LOG100naive_RSnew  LOG50  LOG50_w2v  LOG50naive  LOG50naive_RS  LOG50naive_RSnew  LOG50sparsify  LOG50sparsify_RS
src/: graph.hpp  main.cpp  match.cpp  match.hpp
word2vec-read-only/: run.sh
